syntax = "proto3";

package travelbob.blogs;

service Blogs {
  // Obtains all blogs.
  rpc GetAllBlogs(AllBlogsRequest) returns (AllBlogsReply) {}
  // Obtains a blogpost by it's id.
  rpc GetBlogposts(BlogpostsRequest) returns (BlogpostsReply) {}
}

message AllBlogsRequest {
}

message AllBlogsReply {
  repeated Blog blogs = 1;
}

message BlogpostsRequest {
  int32 blogId = 1;
}

message BlogpostsReply {
  repeated Blogpost blogposts = 1;
}

message Blog {
  int32 id = 1;
  string blogImageUrl = 2;
  string name = 3;
  string author = 4;
}

message Blogpost {
  int32 id = 1;
  string headerImageUrl = 2;
  string title = 3;
  string text = 4;
  int32 blogId = 5;
}
